--- a/Cal counter/cal_tracker_frontend/package.json
+++ b/Cal counter/cal_tracker_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tracker-app",
+  "name": "cal_tracker_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
